[package]
name = "reply_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "2"

teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
futures-util = "0.3"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }